--- a/src/BlurSharp.Tests/BlurSharp.Tests.csproj
+++ b/src/BlurSharp.Tests/BlurSharp.Tests.csproj
@@ -7,15 +7,31 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="img\doughnut.png" />
-    <None Remove="img\doughnut_black_and_white.png" />
+    <None Remove="img\pic1.png" />
+    <None Remove="img\pic2.png" />
+    <None Remove="img\pic3.png" />
+    <None Remove="img\pic4.png" />
+    <None Remove="img\pic5.png" />
+    <None Remove="img\pic6.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="img\doughnut.png">
+    <Content Include="img\pic1.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="img\doughnut_black_and_white.png">
+    <Content Include="img\pic2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\pic3.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\pic4.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\pic5.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\pic6.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
