--- a/src/BlurSharp.Drawing/BlurSharp.Drawing.csproj
+++ b/src/BlurSharp.Drawing/BlurSharp.Drawing.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.1;netcoreapp2.1</TargetFrameworks>
+    <Version>0.0.1-alpha.1</Version>
+    <PackageProjectUrl>https://github.com/crozone/BlurSharp</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/crozone/BlurSharp</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>blurhash image preview compression encoding</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Authors>Ryan Crosby</Authors>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
